5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1582_1334.log
== TEST (2019-03-14 00:42:14) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16-8)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 64/8)

print("Resto: ", 248//30)

print("Potenciacao: ", 2³)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:42:20) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16-8)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 64/8)

print("Resto: ", 248//30)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:42:29) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16-8)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 64/8)

print("Resto: ", 248//30)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:42:32) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16-8)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 64/8)

print("Resto: ", 248//30)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:42:49) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 64/8)

print("Resto: ", 248//30)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:43:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 64/8)

print("Resto: ", 248//30)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:43:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 64/8)

print("Resto: ", 248//30)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:43:11) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 64/8)

print("Resto: ", 248//30)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.137719
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 01:17:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 64/8)

print("Resto: ", 248//30)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.162925
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
